acitons reducers sagas organized with their own component

--- a/phone-south-side/src/frontend/package.json
+++ b/phone-south-side/src/frontend/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.0.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.4",
+    "redux-dynamic-modules": "^5.0.2",
     "redux-saga": "^0.16.2"
   },
   "scripts": {
