added flow-bin depend. + css changes

--- a/phone-south-side/src/frontend/package.json
+++ b/phone-south-side/src/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flow-bin": "^0.109.0",
     "mqtt": "^2.18.8",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   },
   "eslintConfig": {
     "extends": "react-app"
